--- a/src/pages/loginPage/login.css
+++ b/src/pages/loginPage/login.css
@@ -7,12 +7,15 @@
 }
 
 .login .card {
-  width: 50%;
+  width: 70%;
   display: flex;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 20px;
   min-height: 600px;
   overflow: hidden;
+  -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+  box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
 }
 
 .login .card .left {
@@ -29,8 +32,9 @@
 }
 
 .login .card .left h1 {
-  font-size: 100px;
+  font-size: 50px;
   line-height: 100px;
+  color: white;
 }
 
 .login .card .left span {
@@ -38,7 +42,7 @@
 }
 
 .login .card .left button {
-  width: 50%;
+  width: 100px;
   padding: 10px;
   border: none;
   background-color: white;
