--- a/src/pages/registerPage/register.css
+++ b/src/pages/registerPage/register.css
@@ -1,21 +1,24 @@
 .register {
-  height: 100vh;
+  height: 110vh;
   background-color: rgb(193, 190, 255);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.card {
-  width: 50%;
+.register .card {
+  width: 70%;
   display: flex;
   flex-direction: row-reverse;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 20px;
   min-height: 600px;
   overflow: hidden;
+  -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+  box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
 }
-.left {
+.register .card .left {
   flex: 1;
   background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
     url("https://images.pexels.com/photos/4881619/pexels-photo-4881619.jpeg?auto=compress&cs=tinysrgb&w=1600")
@@ -27,8 +30,9 @@
   gap: 30px;
   color: white;
 }
+
 h1 {
-  font-size: 100px;
+  font-size: 50px;
   line-height: 100px;
 }
 
