--- a/src/components/leftbar/leftbar.css
+++ b/src/components/leftbar/leftbar.css
@@ -4,11 +4,11 @@
   top: 70px;
   height: calc(100vh - 70px);
   overflow: scroll;
-  background-color: themed("bg");
-  color: themed("textColor");
+  background-color: white;
+  color: #555;
 }
 
-&::-webkit-scrollbar {
+.leftbar &::-webkit-scrollbar {
   display: none;
 }
 
@@ -35,7 +35,7 @@
 .leftbar .menu .user {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 2px;
 }
 
 .leftbar .menu .user img {
@@ -57,6 +57,7 @@
 
 .leftbar .menu .item img {
     width: 30px;
+    height: 30px;
 }
 
 .leftbar .menu .item span {
