--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,4 +1,4 @@
-.share {
+.share__component {
   -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
@@ -8,7 +8,7 @@
   margin-bottom: 20px;
 }
 
-.container {
+.share__container {
   padding: 20px;
 }
 
@@ -69,7 +69,7 @@ hr {
   color: gray;
 }
 
-.right button {
+.right .share__btn {
   border: none;
   padding: 10px;
   color: white;
@@ -77,9 +77,9 @@ hr {
   cursor: pointer;
   background-color: #5271ff;
   border-radius: 10px;
-  transition: .4s all ease;
+  transition: 0.4s all ease;
 }
 
-.right button:hover {
-    background-color: #1b3196;
-  }
+.right .share__btn:hover {
+  background-color: #1b3196;
+}
