--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -2,7 +2,7 @@
   -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
-  border-radius: 20px;
+  border-radius: 0 0 20px;
   background-color: white;
   color: #000;
   margin-bottom: 20px;
