--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -28,4 +28,9 @@
 .rightbar .container p {
   text-align: center;
   margin-bottom: 50px;
+  font-size: 14px;
+}
+
+.rightbar .container button {
+  margin-bottom: 10px;
 }
