--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,4 +1,4 @@
-.share__component {
+.share {
   -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
   box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
@@ -8,29 +8,31 @@
   margin-bottom: 20px;
 }
 
-.share__container {
+.shareWrapper {
   padding: 20px;
 }
 
-.top {
+.shareTop {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.top img {
+.shareProfileImg {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+  margin-right: 10px;
 }
 
-.top input {
+.shareInput {
   border: none;
   outline: none;
   padding: 20px 10px;
   background-color: transparent;
   width: 60%;
+  font-size: 14px;
   color: #000;
 }
 
@@ -41,35 +43,36 @@ hr {
   background-color: lightgray;
 }
 
-.bottom {
+.shareBottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.left {
+.shareOptions {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.item {
+.shareOption {
   display: flex;
   align-items: center;
-  gap: 10px;
+  margin-right: 15px;
   cursor: pointer;
 }
 
-.item img {
+.shareOption img {
   height: 20px;
+  margin-right: 10px;
 }
 
-.item span {
+.shareOption span {
   font-size: 12px;
   color: gray;
 }
 
-.right .share__btn {
+.shareButton {
   border: none;
   padding: 10px;
   color: white;
@@ -78,8 +81,9 @@ hr {
   background-color: #5271ff;
   border-radius: 10px;
   transition: 0.4s all ease;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
 }
 
-.right .share__btn:hover {
+.shareButton:hover {
   background-color: #1b3196;
 }
