--- a/src/pages/loginPage/login.css
+++ b/src/pages/loginPage/login.css
@@ -76,6 +76,13 @@
   padding: 20px 10px;
 }
 
+.error {
+  color: #f44336;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
 .login .card .right form button {
   width: 50%;
   padding: 10px;
