--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -14,7 +14,7 @@
 }
 
 .logo {
-  font-size: 1.5rem;
+  font-size: calc(1rem + 1.2vw);
   margin-left: 20px;
   font-weight: bold;
   color: #5271ff;
