--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -26,9 +26,9 @@
 }
 
 .searchbar {
-  -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
-  -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
-  box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+  -webkit-box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.38);
+  box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.38);
   width: 90%;
   height: 30px;
   background-color: white;
@@ -41,6 +41,12 @@
 .searchIcon {
   font-size: 20px;
   margin: 0 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .searchbar {
+    display: none;
+  }
 }
 
 .searchInput {
